--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.22",
+    "ai": "^3.3.28",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "openai": "^4.58.0",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.6",
